Original r0 variant of MM4 board added
Signed-off-by: Rod Gilchrist <rod_gilchrist@yahoo.com>

--- a/README
+++ b/README
@@ -10,3 +10,9 @@ http://forums.leaflabs.com/topic.php?id=1268&page=2#post-7828
 
 and siy's hardware design:
 http://forums.leaflabs.com/topic.php?id=1303&page=2&replies=46#post-7882
+
+
+Subdirs:
+
+	MM4 - Leaf Labs Maple Mini clone for 64 pin F1/L1/F4 processors
+		in 0.8" width and 2 layers.
