--- a/README
+++ b/README
@@ -21,3 +21,6 @@ Subdirs:
 		 Features:
 		 - Small (52x38.4mm) breadboard compatible design.
 		 - Support for STM32F103/F2xx/F4xx in 64-pin packages.
+
+	Mini48 - Reworked version of Maple Mini suitable for DIY PCB production
+		and on-board RTC crystal.
