Added Mini48, minor cleanups

--- a/README
+++ b/README
@@ -26,6 +26,11 @@ Subdirs:
 	Mini48 - Reworked version of Maple Mini suitable for DIY PCB production
 		and on-board RTC crystal. Uses Eagle 5.1
 
+	Mini48U - Ultimate version of Mini48. Still suitable for DIY PCB production
+		but smaller parts (0402) and optimized layout allowed make it in the
+		format of original Maple Mini with 0.6" pin header rows pitch.
+		Uses Eagle 5.1
+
 	PiXe-2: 'Stamp' format, 64pin STM32F103 MCU. Eagle 5.1
                 Features: 
 		- Dual-in-line 0.1" grid
