--- a/README
+++ b/README
@@ -55,8 +55,8 @@ Subdirs:
 
 	Orone-mini - series of boards intended to be more easily 'DIY-able'
 		than LeafLabs Maple-mini, and incorporate several improvements.
-		The first board, Orone-mini-S8A has pins 0.2" wider 
-		than Maple-mini. It is otherwise software and pin-compatible 
+		The first boards, Orone-mini-S8x have pins 0.2" wider 
+		than Maple-mini. They are otherwise software and pin-compatible 
 		with Maple-mini (exception is 'av+' which is intended to 
 		improve the power supply capability). 
                 Not yet tested.
